--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rpsls",
+  "name": "node-rpsls",
   "version": "1.0.0",
-  "description": "This assignment will help you learn to create an installable Node.js module package. You'll also provide a command line interface with it.",
+  "description": "Rock Paper Scissors Lizard Spock Implementation",
   "main": "./lib/rpsls.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,18 +10,21 @@
     "type": "git",
     "url": "git+https://github.com/comp426-2023-spring/a03-sanjanasundhar.git"
   },
+  "keywords": [
+    "modules"
+  ],
+  "bin": {
+    "node-rps": "./bin/rps-cli.js",
+    "node-rpsls": "./bin/rpsls-cli.js"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8"
+  },
   "author": "sanjanasundhar",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a03-sanjanasundhar/issues"
   },
   "homepage": "https://github.com/comp426-2023-spring/a03-sanjanasundhar#readme",
-  "bin": {
-    "node-rps": "./bin/rps-cli.js",
-    "node-rpsls": "./bin/rpsls-cli.js"
-  },
-  "type": "module",
-  "dependencies": {
-    "minimist": "^1.2.8"
-  }
+  "type": "module"
 }
